--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
+      - name: Copy 404.html
+        run: cp 404.html ./dist
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
