--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
+    "@solidjs/meta": "^0.28.6",
     "@solidjs/router": "^0.8.2",
     "mathjax": "^3.2.2",
     "solid-js": "^1.7.6"
