--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,11 +1,10 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Deploy static content to pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -29,17 +28,19 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Node
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v4
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-            node-version: 18
-            cache: 'npm'
-      - name: Install dependencies
-        run: npm install
+          go-version: '1.20'
+
       - name: Build
-        run: npm run build
+        run: go build
+
+      - name: Compile
+        run: ./compiler --path src/
+
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
@@ -50,3 +51,4 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
